# algo-visualizer

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml
.github/: cmake-tests-workflow.yml
.github/workflows/: cmake-tests-workflow.yml
docs/source/: conf.py  docu.rst  index.rst
include/: algorithm.h  resources.h  visualizer.h
src/: CMakeLists.txt  algorithm.cpp  generic_visualizer.cpp  main.cpp  main_generic.cpp  main_visualizer.cpp  main_visualizer2.cpp  test_algos.cpp  visualizer.cpp  visualizer2.cpp
tests/: CMakeLists.txt  test_sortalgos.cpp
